# mangaplus

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml  setup.py
.github/workflows/: python-publish.yml
docs/protobuf/: README.md  builder.py  compile.py  compiled.java  mangaplus_api_protocol.proto  mangaplus_api_protocol_pb2.py  parser.py
docs/protobuf/protos/: AdNetworkOuterClass.proto  AllFreeTitlesViewOuterClass.proto  AllTicketTitlesViewOuterClass.proto  AllTitlesViewOuterClass.proto  AllTitlesViewV2OuterClass.proto  BannerOuterClass.proto  ChapterOuterClass.proto  CommentIconOuterClass.proto  CommentListViewOuterClass.proto  CommentOuterClass.proto  Dialogue.proto  DownloadableImagesViewOuterClass.proto  EngageViewOuterClass.proto  ErrorResultOuterClass.proto  FavoriteTitlesViewOuterClass.proto  FeaturedTitlesViewOuterClass.proto  FeaturedTitlesViewV2OuterClass.proto  FeedbackOuterClass.proto  FeedbackViewOuterClass.proto  HistoryViewOuterClass.proto  HomePreviewViewOuterClass.proto  HomeViewV3OuterClass.proto  HomeViewV4OuterClass.proto  HomeViewV6OuterClass.proto  InitialViewV2OuterClass.proto  IntroduceSubscriptionOuterClass.proto  LabelOuterClass.proto  LabeledViewOuterClass.proto  LanguagesOuterClass.proto  MangaViewerOuterClass.proto  MetaInfoOuterClass.proto  MpcStatusViewOuterClass.proto  PageOuterClass.proto  PopupOuterClass.proto  ProfileSettingsViewOuterClass.proto  PublisherNewsListViewOuterClass.proto  PublisherNewsOuterClass.proto  PushTokenViewOuterClass.proto  QuestionnaireOuterClass.proto  QuestionnaireViewOuterClass.proto  (+29 more)
docs/subscription/: README.md  hook.js
mangaplus/: __init__.py  client.py  constants.py  shueisha.py  utils.py
mangaplus/protocol/: mangaplus_api.proto  mangaplus_api_pb2.py  mangaplus_api_pb2.pyi
pymangaplus/: __init__.py  api_protocol.proto  api_protocol_pb2.py  client.py  constants.py  utils.py
